cluster-apps/rails-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-app
        image: ghcr.io/mikevader/rails-demo:v1.3
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
      - name: rails-app-metrics
        image: ghcr.io/mikevader/rails-demo:v1.3
        command: ["bundle exec prometheus_exporter"]
        ports:
        - name: metrics
          containerPort: 9394
          protocol: TCP
