cluster-apps/rails-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-demo
spec:
  type: ClusterIP
  selector:
    app: rails-demo
  ports:
    - name: http
      protocol: TCP
      port: 3000
    - name: http-metrics
      port: 9394
      protocol: TCP
